Add matcher filter for pairs endpoint (#223)
* Fix pairs (add matcher)

* Fix load config

* add matcher filter for pairs endpoint

* add matcher param to get/mget pairs endpoints

* add matcher param to get/mget pairs endpoints

* add matcher meta field to pairs mget response
