# docs/openapi.yaml
@@ -222,6 +222,11 @@ paths:
             type: array
             items: 
               type: boolean
+        - in: query
+          name: matcher
+          description: 'Matcher address'
+          schema:
+            type: string
         - name: limit
           in: query
           description: How many pairs to await in response.
