# src/endpoints/pairs/one.js
@@ -1,6 +1,8 @@
 const createService = require('../../services/pairs');
 const { select } = require('../utils/selectors');
 const { captureErrors } = require('../../utils/captureErrors');
+const { parseFilterValues } = require('../_common/filters');
+const { query: parseQuery } = require('../_common/filters/parsers');
 const { handleError } = require('../../utils/handleError');
 
 /**
@@ -8,8 +10,9 @@ const { handleError } = require('../../utils/handleError');
  * @name /pairs/id1/id2?...params
  */
 const pairsOneEndpoint = async ctx => {
-  const { fromParams } = select(ctx);
+  const { fromParams, query } = select(ctx);
   const [id1, id2] = fromParams(['id1', 'id2']);
+  const { matcher } = parseFilterValues({ matcher: parseQuery })(query);
 
   ctx.eventBus.emit('ENDPOINT_HIT', {
     url: ctx.originalUrl,
@@ -25,6 +28,7 @@ const pairsOneEndpoint = async ctx => {
     .get({
       amountAsset: id1,
       priceAsset: id2,
+      matcher: matcher || ctx.state.config.defaultMatcher,
     })
     .run()
     .promise();
